--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
-  "name": "we-create.lv",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DanielPopchenko/we-create.lv.git"
-  },
-  "author": "Daniil Popchenko <daniel.popchenko@icloud.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DanielPopchenko/we-create.lv/issues"
-  },
-  "homepage": "https://github.com/DanielPopchenko/we-create.lv#readme"
+    "name": "we-create_lv",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "NODE_ENV='production' webpack",
+        "start": "webpack-dev-server"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/DanielPopchenko/we-create_lv.git"
+    },
+    "author": "Daniil Popchenko <daniel.popchenko@icloud.com>",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/DanielPopchenko/we-create_lv/issues"
+    },
+    "homepage": "https://github.com/DanielPopchenko/we-create_lv#readme",
+    "devDependencies": {
+        "@babel/core": "^7.21.3",
+        "@babel/preset-env": "^7.20.2",
+        "babel-loader": "^9.1.2",
+        "css-loader": "^6.7.3",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.7.5",
+        "sass": "^1.60.0",
+        "sass-loader": "^13.2.1",
+        "style-loader": "^3.3.2",
+        "webpack": "^5.76.3",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.13.1"
+    }
 }
